# HxFin

./: .env.example  .gitignore  biome.json  drizzle.config.ts  dssad  newFeatures.md  package-lock.json  package.json
.claude/: launch.json  settings.local.json
.skill-staging/uncodixify-ui/: SKILL.md
.skill-staging/uncodixify-ui/agents/: openai.yaml
.skill-staging/uncodixify-ui/references/: uncodixify-source.md
backend/: Cargo.toml  bacon.toml
backend/src/: db.rs  errors.rs  main.rs  time.rs
backend/src/routes/: mod.rs
backend/src/routes/budget/: mod.rs
backend/src/routes/budget/income/: mod.rs  profile.rs
backend/src/routes/budget/planned_purchases/: categories.rs  items.rs  mod.rs
backend/src/routes/budget/recurring/: categories.rs  costs.rs  mod.rs  summary.rs
backend/src/routes/investments/: mod.rs
backend/src/routes/investments/portfolio/: accounts.rs  holdings.rs  mod.rs  refresh.rs
backend/src/routes/investments/portfolio/tracking/: avanza.rs  mod.rs  nordea.rs
backend/src/routes/investments/projections/: mod.rs  preset.rs
backend/src/routes/loans/: loans.rs  mod.rs
docs/: backend-budget-api.md
src/: app.css
src/lib/: budget.ts  calculator.ts  navigation.ts  tax.ts
src/lib/api/: client.ts  definition.ts  http.ts
src/lib/components/: Chart.svelte  (+6 more)
src/routes/: +layout.svelte  +page.svelte  +page.ts
tests/: api-http.test.ts  budget-selectors.test.ts  finance-format.test.ts  finance-recurrence.test.ts  imports-categorization.test.ts  imports-csv.test.ts  register-aliases.mjs  table-sort.test.ts  wishlist-validation.test.ts
(+255 files in other folders)
