[package]
name = "fin-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["query"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"
# rustls-tls avoids the system OpenSSL/schannel dep so Windows builds work
# without extra setup. `gzip` because nordeafunds.com serves compressed.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
regex = "1"
